fixed overflow

--- a/todo/src/components/ListItem.module.css
+++ b/todo/src/components/ListItem.module.css
@@ -16,16 +16,15 @@
     color: white;
 }
 .input {
+    width: 100%;
     margin-block-end: 1em;
     margin-block-start: 1em;
     margin-right: auto;
     margin-left: 5%;
     background-color: transparent;
-    border-left: none;
-    border-top: none;
-    border-right: none;
-    border-bottom: 2px white;
+    border: none;
     color: white;
+    padding: 0px; 
     font-size: 2em;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
